<resources>
    <string name="app_name">EZCook</string>
    <string name="botom_home">Trang chủ</string>
    <string name="botom_trend">Thịnh hành</string>
    <string name="botom_post">Đăng bài</string>
    <string name="botom_note">Sổ tay</string>
    <string name="botom_profile">Cá nhân</string>
    
    <string name="action_seach">Tìm kiếm</string>

    <string name="Like_fragment">Like Fragment</string>
    <string name="Save_fragment">Save Fragment</string>
    <string name="Collection_fragment">Collection Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="baidang_fragment">Bài đăng Fragment</string>
    <string name="yeuthich_fragment">Yêu thích Fragment</string>

    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is Channel 1</string>
</resources>